--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
              <!-- Footer -->
    <footer class="bg-light text-black p-5">
-	<div class="row ml-3">
+	<div id="about_us" class="row ml-3">
 		<div class="col-md-6">		
 		<h5>About Us</h5>
 		<p>"Beautiful Indonesia" is a website that collects some photos with the natural beauty and culture of Indonesia from various regions. It is intended that the visitors of this web from both inside and outside the country can see the extraordinary beauty in Indonesia.<br><span class="font-weight-bold">LET'S EXPLORE INDONESIA!!</span>LET'S EXPLORE INDONESIA!!</p>
